adding load storage modal

--- a/style.css
+++ b/style.css
@@ -235,6 +235,27 @@ table tbody tr:hover {
     visibility:visible
 }
 
+.modal-overlay-load-storage {
+    width:100%;
+    height:100%;
+    position:fixed;
+    z-index: 999;
+    top:0;
+    background: rgba(0,0,0,0.7);
+
+    display:flex;
+    align-items:center;
+    justify-content:center;
+
+    opacity:0;
+    visibility:hidden
+}
+
+.modal-overlay-load-storage.active {
+    opacity:1;
+    visibility:visible
+}
+
 /* FORM ---------------------------------------------------------------*/
 #form {
     max-width: 500px;
@@ -266,6 +287,11 @@ input{
 }
 
 
+.menu {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 /* RESPONSIBLE ==============================================*/
 
 @media (min-width: 800px) {
